--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-file-system": "~9.3.0",
+    "expo-images-picker": "^1.3.0",
+    "expo-multiple-media-imagepicker": "^1.2.1",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.6",
     "react": "16.13.1",
