updated app description

--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "This app allows User to browse different travel options of cities. Travel options can be filtered by a particular city or a category. User has to login or sign up to access the app features. User is able to view, add, edit or delete any travel option under a particular city. Each travel option also includes local gallery photo uploads and edits."
   }
 }
